change opencompany to carrot

--- a/_projects/carrot.html
+++ b/_projects/carrot.html
@@ -1,13 +1,14 @@
 ---
 layout: default
-title: OpenCompany
+title: Carrot
 subtitle: Transforming how organizations operate openly and transparently.
-permalink: /work/opencompany/
-image: /img/projects/opencompany/opencompany.png
-image_description: The logo of OpenCompany.
+permalink: /work/carrot/
+redirect_from: /work/opencompany/
+image: /img/projects/carrot/carrot.png
+image_description: The icon logo of Carrot.
 feature_image:
 feature_image_description:
-order: 140
+order: 5
 tags: [digital services delivery, sean johnson]
 excerpt: An open-source, digital platform for organizations to drive new levels of alignment through radical openness and transparency.
 project_members:
@@ -34,13 +35,13 @@ practices:
   - Cloud hosting
 screenshots:
 news_posts:
-project_url: https://opencompany.com/
+project_url: https://carrot.io/
 source_code_url: https://github.com/open-company
 ---
 
 {% capture summary %}
   <p>
-    OpenCompany is an open-source, digital platform that organizations use to drive
+    Carrot is an open-source, digital platform that organizations use to drive
     new levels of alignment and engagement through radical openness and transparency.
   </p>
 {% endcapture %}
@@ -55,7 +56,7 @@ source_code_url: https://github.com/open-company
 
 {% capture solution %}
   <p>
-    Sean Johnson led the OpenCompany development team to create an open-source,
+    Sean Johnson led the Carrot development team to create an open-source,
     digital transparency platform for organizations. Referred to as "GitHub for the rest of
     your organization," it simplifies how leaders share key business information such as
     strategic objectives, performance results, and finances with internal and external
@@ -68,8 +69,9 @@ source_code_url: https://github.com/open-company
 
 {% capture results %}
   <p>
-    Thus far, notable results include delivery of a minimum viable product
-    and validation of core hypotheses through extensive and iterative user testing.
+    Thus far, notable results include delivery of a minimum viable product,
+    validation of core hypotheses through extensive and iterative user testing,
+    and successful release of an alpha version of the application.
   </p>
 {% endcapture %}
 
