carrot is in beta, not alpha

--- a/_projects/carrot.html
+++ b/_projects/carrot.html
@@ -71,7 +71,7 @@ source_code_url: https://github.com/open-company
   <p>
     Thus far, notable results include delivery of a minimum viable product,
     validation of core hypotheses through extensive and iterative user testing,
-    and successful release of an alpha version of the application.
+    and successful release of a beta version of the application.
   </p>
 {% endcapture %}
 
