update carrot case study

--- a/_projects/carrot.html
+++ b/_projects/carrot.html
@@ -62,8 +62,7 @@ source_code_url: https://github.com/open-company
     strategic objectives, performance results, and finances with internal and external
     stakeholders. By making this information open, accessible, and interactive, the
     platform enables organizations to align and engage stakeholders in ways that inspire
-    trust, new ideas, and a shared sense of purpose and ownership. In the coming months,
-    Sean and the team will be transitioning the platform with a redesign and rebranding.
+    trust, new ideas, and a shared sense of purpose and ownership.
   </p>
 {% endcapture %}
 
