--- a/_projects/tsa_cloud_adoption.html
+++ b/_projects/tsa_cloud_adoption.html
@@ -9,7 +9,7 @@ feature_image:
 feature_image_description:
 order: 60
 tags: [digital transformation, chris cairns]
-excerpt: A jumpstart team for accelerating the Transformation Security Administration's transition to a cloud-based operating model.
+excerpt: A jumpstart team for accelerating the Transportation Security Administration's transition to a cloud-based operating model.
 project_members:
   - chris-cairns
 technologies:
@@ -38,7 +38,7 @@ source_code_url:
 
 {% capture summary %}
   <p>
-    The Transformation Security Administration (TSA) Chief Information Officer (CIO)
+    The Transportation Security Administration (TSA) Chief Information Officer (CIO)
     needed help undertaking a broad cloud transformation initiative, so a specialized
     team of site reliability engineers was provided to jumpstart the transition.
   </p>
