--- a/_projects/agile_delivery_services_marketplace.html
+++ b/_projects/agile_delivery_services_marketplace.html
@@ -130,7 +130,7 @@ source_code_url:
     </li>
 
     <li>
-      Heralded by industry, Congress, and the White House's Office of Management and Budget
+      Lauded by industry, Congress, and the White House's Office of Management and Budget
       as a model for agencies to follow
     </li>
 
