re-add stylized hr divider to services page

--- a/pages/services.html
+++ b/pages/services.html
@@ -11,7 +11,7 @@ permalink: /services/
 
 <div class="our-services">
 
-  <section class="page-block extra-space">
+  <section class="page-block">
     <div class="page-block-header-2 sr-only">
       <h2>What we offer</h2>
     </div>
@@ -50,7 +50,11 @@ permalink: /services/
     </div>
   </section>
 
-  <section class="page-block extra-space">
+  <div class="separator-wrapper">
+    <hr class="separator">
+  </div>
+
+  <section class="page-block separated">
     <div class="page-block-header-2">
       <h2>Key capabilities</h2>
 
@@ -83,7 +87,11 @@ permalink: /services/
     </div>
   </section>
 
-  <section class="page-block">
+  <div class="separator-wrapper">
+    <hr class="separator">
+  </div>
+
+  <section class="page-block separated">
     <div class="page-block-header-3">
       <h2>Industry information</h2>
     </div>
