add carrot screenshot

--- a/_projects/carrot.html
+++ b/_projects/carrot.html
@@ -6,8 +6,8 @@ permalink: /work/carrot/
 redirect_from: /work/opencompany/
 image: /img/projects/carrot/carrot.png
 image_description: The icon logo of Carrot.
-feature_image:
-feature_image_description:
+feature_image: /img/projects/carrot/carrot-demo-page.png
+feature_image_description: Product screenshot of a demo page of the streams functionality.
 order: 5
 tags: [digital services delivery, sean johnson]
 excerpt: An open-source, digital platform for organizations to drive new levels of alignment through radical openness and transparency.
