change service descriptions and open position description

--- a/pages/services.html
+++ b/pages/services.html
@@ -134,6 +134,7 @@ permalink: /services/
           <h3><abbr title="North American Industry Classification System">NAICS</abbr> Codes</h3>
           <p><abbr title="Administrative Management and General Management Consulting">541611</abbr></p>
           <p><abbr title="Custom Computer Programming Services">541511</abbr></p>
+          <p><abbr title="Other Computer Related Services">541519</abbr></p>
         </div>
       </div>
     </div>
