add job new posting

--- a/pages/about.html
+++ b/pages/about.html
@@ -21,7 +21,7 @@ permalink: /about/
       <div class="about-info-row">
         <div class="about-info-col">
           <p>
-            Skylight was founded in 2016. We're currently made up of 11 people and one ferret.
+            Skylight was launched in June of 2017. We're currently made up of 12 people and one ferret.
             We're working hard to maintain disciplined growth while at the same time cultivating
             an incredible culture. Our headquarters is in <a href="https://www.google.com/maps/place/Chapel+Hill,+NC/@35.9209387,-79.109331,12z/data=!3m1!4b1!4m5!3m4!1s0x89acc31c216e7ea7:0x7f03bae00443e4cb!8m2!3d35.9131996!4d-79.0558445" target="_blank">Chapel Hill, North Carolina</a>,
             but we're a distributed and remote-friendly team. A lot of our client work
