--- a/pages/join.html
+++ b/pages/join.html
@@ -156,7 +156,7 @@ permalink: /join/
         <p>
           Within five days after you submit your application,
           we'll evaluate your information against the qualifications of
-          our <a href="/join/#join">open positions</a> and communicate next steps.
+          our <a href="/join/#open-positions">open positions</a> and communicate next steps.
           If you look like a potential match, we'll begin the live interview process.
         </p>
 
@@ -383,7 +383,7 @@ permalink: /join/
         <h2>Submit your info</h2>
 
         <p>
-          If you don't see an <a href="/join/#join">open position</a> that fits you, or we're not currently advertising
+          If you don't see an <a href="/join/#open-positions">open position</a> that fits you, or we're not currently advertising
           any openings, we'd love for you to apply anyway!
         </p>
 
