Fixed how inner page nav was working

--- a/pages/join.html
+++ b/pages/join.html
@@ -383,7 +383,7 @@ permalink: /join/
         <h2>Submit your info</h2>
 
         <p>
-          If you don't see an <a href="/join/#open-positions">open position</a> that fits you, or we're not currently advertising
+          If you don't see an <a href="/join/#join-open-positions">open position</a> that fits you, or we're not currently advertising
           any openings, we'd love for you to apply anyway!
         </p>
 
