--- a/_projects/recreation_info_database_api.html
+++ b/_projects/recreation_info_database_api.html
@@ -8,7 +8,7 @@ image_description: An abstract image of a camping tent enclosed within API compu
 feature_image:
 feature_image_description:
 order: 150
-tags: [digital procurement, microconsulting, kin lane]
+tags: [digital procurement, microconsulting, api microconsulting, kin lane]
 excerpt: Sharing expertise of APIs to improve a critical solicitation for the next generation of the Recreation Information Database.
 project_members:
   - kin-lane
