misc design touch-ups

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ title: Home
     <section class="landing-info-row">
       <div class="landing-info-text-col">
         <div class="landing-info-text">
-          <h3 class="header-display-5">Solving important problems</h3>
+          <h3>Solving important problems</h3>
           <p>
             Every day millions of people &mdash; from veterans to immigrants &mdash;
             depend on government services to fulfill their needs. But too often these
@@ -68,7 +68,7 @@ title: Home
     <section class="landing-info-row">
       <div class="landing-info-text-col">
         <div class="landing-info-text">
-          <h3 class="header-display-5">Services designed for your success</h3>
+          <h3>Services designed for your success</h3>
           <p>
             Thinking and being digital requires fundamental practice, culture,
             and technology change. And that means institutionalizing modern
@@ -89,7 +89,7 @@ title: Home
     <section class="landing-info-row">
       <div class="landing-info-text-col">
         <div class="landing-info-text">
-          <h3 class="header-display-5">Experience to solve your toughest challenges</h3>
+          <h3>Experience to solve your toughest challenges</h3>
           <p>
             We founded and scaled 18F, built and sold technology startups,
             created standards that power the internet, and more.
@@ -109,7 +109,7 @@ title: Home
     <section class="landing-info-row">
       <div class="landing-info-text-col">
         <div class="landing-info-text">
-          <h3 class="header-display-5">Strengthening your culture through ours</h3>
+          <h3>Strengthening your culture through ours</h3>
           <p>
             Culture change is at the heart of achieving digital mastery.
             From open-sourcing our assets to hiring first-rate digital talent
@@ -128,7 +128,7 @@ title: Home
 
     <section class="landing-content-row">
       <div class="landing-content-primary-col">
-        <h2>Let's deliver something great</h2>
+        <h2>Let's deliver something great together</h2>
       </div>
 
       <div class="landing-content-secondary-col">
