--- a/pages/work.html
+++ b/pages/work.html
@@ -5,9 +5,8 @@ permalink: /work/
 ---
 
 {% capture header_content %}
-  We're a new-found HUBZone digital consultancy. Although our company is new,
-  our people are not. Explore a sampling of the experience that we bring to your
-  biggest digital challenges and opportunities.
+  Explore a sampling of the types of experience that we can
+  bring to your biggest digital challenges and opportunities.
 {% endcapture %}
 
 {% include page_header.html
