Added grey left justified bullet styles

--- a/pages/join.html
+++ b/pages/join.html
@@ -8,7 +8,7 @@ permalink: /join/
 
   <div class="row">
 
-    <section class="join-content-col">
+    <section class="join-content-col left-justified-list">
       <div id="join">
         <h2>Join the team</h2>
 
