--- a/_projects/carrot.html
+++ b/_projects/carrot.html
@@ -66,11 +66,19 @@ source_code_url: https://github.com/open-company
 {% endcapture %}
 
 {% capture results %}
-  <p>
-    Thus far, notable results include delivery of a minimum viable product,
-    validation of core hypotheses through extensive and iterative user testing,
-    and successful release of a beta version of the application.
-  </p>
+  <ul>
+    <li>
+      Created a minimum viable product
+    </li>
+
+    <li>
+      Validated core hypotheses through extensive and iterative user testing
+    </li>
+
+    <li>
+      Successfully released of a beta version of the application
+    </li>
+  </ul>
 {% endcapture %}
 
 {% include project.html
