apply identity changes

--- a/pages/culture.html
+++ b/pages/culture.html
@@ -6,8 +6,7 @@ permalink: /culture/
 
 {% capture header_content %}
   Our values are the core of our culture, offering a set of guidelines on the
-  behaviors and mindsets needed to achieve our mission of making government work
-  in a digital world.
+  behaviors and mindsets needed to achieve our mission.
 {% endcapture %}
 
 {% include page_header.html
