--- a/pages/blog.html
+++ b/pages/blog.html
@@ -6,7 +6,7 @@ permalink: /blog/
 
 {% include page_header.html
   header_content_class = 'page-header-content-1'
-  header_content = 'Our shared thoughts on technology, design, procurement, business, culture, and more.'
+  header_content = 'Our thoughts on design, technology, and more.'
 %}
 
 <div class="our-blog">
