--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ title: Home
 
     <section class="landing-content-row landing-content-row-margin">
       <div class="landing-content-primary-col">
-        <h2>A new type of government consultancy</h2>
+        <h2>A new type of consultancy</h2>
       </div>
 
       <div class="landing-content-secondary-col">
@@ -128,7 +128,7 @@ title: Home
 
     <section class="landing-content-row">
       <div class="landing-content-primary-col">
-        <h2>Let's deliver something great together</h2>
+        <h2>Let's deliver something great</h2>
       </div>
 
       <div class="landing-content-secondary-col">
