--- a/_projects/ssa_agile_microsprints.html
+++ b/_projects/ssa_agile_microsprints.html
@@ -3,8 +3,8 @@ layout: default
 title: Agile Micro-sprints at the SSA
 subtitle: Advancing the turnaround of a troubled program in 3 days.
 permalink: /work/ssa-agile-microsprints/
-image: /img/projects/ssa_agile_microsprints/people-brainstorming-stickies.jpg
-image_description: Picture of people brainstorming with stickies on a whiteboard.
+image: /img/projects/ssa_agile_microsprints/microsprint.png
+image_description: Illustration of an agile sprint cycle on various sticky notes.
 feature_image:
 feature_image_description:
 order: 80
