update benefits offered

--- a/pages/join.html
+++ b/pages/join.html
@@ -265,19 +265,23 @@ permalink: /join/
           </li>
 
           <li>
-            Profit-sharing and bonus opportunities
+            Profit-sharing and/or bonus opportunities
           </li>
 
           <li>
-            Company-subsidized health and dental insurance
+            Health insurance, including medical, dental, vision, and more
           </li>
 
           <li>
-            401k plan
+            401k match at 10% of your salary
           </li>
 
           <li>
-            Unlimited paid time off policy
+            Unlimited paid time-off policy
+          </li>
+
+          <li>
+            $2,000 continuing education allowance, including conference events
           </li>
 
           <li>
