update about page

--- a/pages/about.html
+++ b/pages/about.html
@@ -6,11 +6,16 @@ permalink: /about/
 
 {% include page_header.html
   header_title = 'We&apos;re Skylight!'
+  header_class = 'page-header-3'
   header_content_class = 'page-header-content-1'
   header_content = 'Our mission is to make government work in a digital world.'
 %}
 
 <div class="about-us">
+
+  <img src="/img/about-skylight.png"
+    alt="Illustration of a laptop with various govtech and civictech stickers on the back of it."
+    class="about-skylight-img">
 
   <section class="page-block">
     <div class="page-block-header-2">
@@ -21,19 +26,26 @@ permalink: /about/
       <div class="about-info-row">
         <div class="about-info-col">
           <p>
-            Skylight was launched in June of 2017. We're currently made up of 12 people and one ferret.
-            We're working hard to maintain disciplined growth while at the same time cultivating
-            an incredible culture. Our headquarters is in <a href="https://www.google.com/maps/place/Chapel+Hill,+NC/@35.9209387,-79.109331,12z/data=!3m1!4b1!4m5!3m4!1s0x89acc31c216e7ea7:0x7f03bae00443e4cb!8m2!3d35.9131996!4d-79.0558445" target="_blank">Chapel Hill, North Carolina</a>,
-            but we're a distributed and remote-friendly team. A lot of our client work
-            originates from Washington DC.
+            Skylight was launched in June of 2017. We're currently made up of 16 people.
+            A lot of us originally worked for civic-oriented groups such as 18F,
+            the U.S. Digital Service, and the Presidential Innovation Fellows.
+            Now, as part of Skylight, we're working hard to cultivate an incredible
+            team and culture.
           </p>
 
           <p>
-            We're impact junkies who are driven to create better outcomes for the public through
-            great government digital services. We're also engineers, developers, designers,
-            product managers, consultants, writers, speakers, inventors, roboticists, gamers,
-            authors, entrepreneurs, parents, and more. Such a diverse team always gives us a
+            What brings us together is a passion for creating better outcomes for
+            the public through great government digital services. We're basically impact junkies.
+            But we're also engineers, developers, designers, product managers, consultants,
+            writers, speakers, inventors, roboticists, gamers, authors,
+            entrepreneurs, parents, and more. Such a diverse team always gives us a
             unique perspective on things.
+          </p>
+
+          <p>
+            Our headquarters is in <a href="https://www.google.com/maps/place/Chapel+Hill,+NC/@35.9209387,-79.109331,12z/data=!3m1!4b1!4m5!3m4!1s0x89acc31c216e7ea7:0x7f03bae00443e4cb!8m2!3d35.9131996!4d-79.0558445" target="_blank">Chapel Hill, North Carolina</a>,
+            but we're a distributed and remote-friendly team. A lot of our client work
+            originates from Washington DC.
           </p>
         </div>
       </div>
