update previous copy

--- a/pages/join.html
+++ b/pages/join.html
@@ -368,7 +368,7 @@ permalink: /join/
           </li>
 
           <li>
-            Have time to work at least 10-12 hours per week during business hours
+            Have time to work at least 10 hours per week during business hours
           </li>
 
           <li>
