update interhsip program

--- a/pages/join.html
+++ b/pages/join.html
@@ -321,7 +321,7 @@ permalink: /join/
         <h2>Internships</h2>
 
         <p>
-          Our <i>Emerging CivicTech Stars</i> internship program offers opportunities
+          Our <i>Emerging CivicTech Stars</i> internship program offers paid opportunities
           to undergraduate students to gain hands-on experience with making government
           work in the digital age. To prepare you for a successful career in
           <a href="https://en.wikipedia.org/wiki/Civic_technology" target="_blank">civic tech</a>,
