update list of benefits

--- a/pages/join.html
+++ b/pages/join.html
@@ -265,11 +265,23 @@ permalink: /join/
           </li>
 
           <li>
-            Profit-sharing and/or bonus opportunities
+            Bonus opportunities
           </li>
 
           <li>
-            Health insurance, including medical, dental, vision, and more
+            Health insurance, including medical, dental, and vision
+          </li>
+
+          <li>
+            Life insurance
+          </li>
+
+          <li>
+            Short-term and long-term disability insurance
+          </li>
+
+          <li>
+            Flexible spending accounts for medical and dependent care
           </li>
 
           <li>
