add new team member

--- a/_projects/adopta_agency.html
+++ b/_projects/adopta_agency.html
@@ -8,6 +8,7 @@ image_description: An abstract image of a government building enclosed within AP
 feature_image:
 feature_image_description:
 order: 130
+display: true
 tags: [digital services delivery, kin lane]
 excerpt: A civic movement to encourage people to "adopt" government's open datasets, and improve the way these datasets are shared with the public.
 project_members:
