--- a/_projects/agile_acquisition_framework.html
+++ b/_projects/agile_acquisition_framework.html
@@ -8,6 +8,7 @@ image_description: An abstract image of a Venn diagram showing the intersection 
 feature_image:
 feature_image_description:
 order: 20
+display: true
 tags: [digital procurement, chris cairns, robert read]
 excerpt: A comprehensive framework for helping government program teams make the paradigm shift from decades-old acquisition practices based on waterfall to modern acquisition practices based on agile.
 project_members:
