--- a/_projects/digital_acquisition_accelerator.html
+++ b/_projects/digital_acquisition_accelerator.html
@@ -8,6 +8,7 @@ image_description: An abstract image of a speedometer.
 feature_image:
 feature_image_description:
 order: 120
+display: true
 tags: [digital procurement, chris cairns]
 excerpt: A pilot program designed to accelerate the adoption of digital acquisition practices across government.
 project_members:
