--- a/_projects/digital_transformation_framework.html
+++ b/_projects/digital_transformation_framework.html
@@ -8,6 +8,7 @@ image_description: A diagram image showing various digital transformation dimens
 feature_image:
 feature_image_description:
 order: 100
+display: true
 tags: [digital transformation, chris cairns]
 excerpt: A comprehensive framework designed to help agencies transform into digitally-powered organizations.
 project_members:
