--- a/_projects/dol_legacy_system_modernization.html
+++ b/_projects/dol_legacy_system_modernization.html
@@ -8,6 +8,7 @@ image_description: Illustration of an old mainframe system.
 feature_image:
 feature_image_description:
 order: 70
+display: true
 tags: [digital services delivery, robert read, chris cairns]
 excerpt: Using code forensics and modern API practices to dramatically de-risk the modernization of a legacy system at the Department of Labor.
 project_members:
