--- a/_projects/energyos.html
+++ b/_projects/energyos.html
@@ -8,6 +8,7 @@ image_description: An abstract image of a smart grid.
 feature_image:
 feature_image_description:
 order: 50
+display: false
 tags: [digital services delivery, john teeter]
 excerpt: An open-source standard and developer community focused on advancing the interoperable exchange of energy usage data.
 project_members:
