--- a/_projects/maalka.html
+++ b/_projects/maalka.html
@@ -8,6 +8,7 @@ image_description: The logo of Maalka.
 feature_image: /img/projects/maalka/portfolio-energy-consumption-dashboard.jpg
 feature_image_description: Product screenshot of the portfolio energy consumption dashboard.
 order: 40
+display: false
 tags: [digital services delivery, john teeter]
 excerpt: A mixed-source, digital platform for enabling the efficient and sustainable use of energy resources.
 project_members:
