--- a/_projects/people_power.html
+++ b/_projects/people_power.html
@@ -8,6 +8,7 @@ image_description: An abstract image of a globe with connecting nodes representi
 feature_image:
 feature_image_description:
 order: 160
+display: false
 tags: [digital services delivery, john teeter]
 excerpt: An Internet of Things solution platform that enables the automated acquisition of sensor data from connected devices and the delivery of intelligent services to residential and commercial customers.
 project_members:
