--- a/_projects/talkto.html
+++ b/_projects/talkto.html
@@ -8,6 +8,7 @@ image_description: The logo of TalkTo.
 feature_image: /img/projects/talkto/talkto-demo-page.png
 feature_image_description: Product screenshot of a demo page of the messaging functionality.
 order: 10
+display: true
 tags: [digital services delivery, sean johnson]
 excerpt: A digital messaging service that lets consumers text any business, and receive an immediate response.
 project_members:
