--- a/_projects/tsa_cloud_adoption.html
+++ b/_projects/tsa_cloud_adoption.html
@@ -8,6 +8,7 @@ image_description: An abstract image showing a car jumpstarter being used on a c
 feature_image:
 feature_image_description:
 order: 60
+display: true
 tags: [digital transformation, chris cairns]
 excerpt: A jumpstart team for accelerating the Transportation Security Administration's transition to a cloud-based operating model.
 project_members:
