--- a/_projects/us_navy_protosketching.html
+++ b/_projects/us_navy_protosketching.html
@@ -8,6 +8,7 @@ image_description: An abstract image of a website being prototyped on a laptop.
 feature_image:
 feature_image_description:
 order: 90
+display: true
 tags: [microconsulting, robert read]
 excerpt: Empowering the U.S. Navy to make critical design and technology decisions through a unique form of rapid prototyping.
 project_members:
