--- a/_projects/18f_consulting.html
+++ b/_projects/18f_consulting.html
@@ -8,6 +8,7 @@ image_description: The logo of 18F Consulting.
 feature_image:
 feature_image_description:
 order: 110
+display: true
 tags: [digital transformation, chris cairns, robert read]
 excerpt: A specialized team of digital experts within 18F focused on helping agencies achieve digital mastery.
 project_members:
