--- a/_projects/agile_delivery_services_marketplace.html
+++ b/_projects/agile_delivery_services_marketplace.html
@@ -8,6 +8,7 @@ image_description: An abstract image representing a marketplace of agile vendors
 feature_image:
 feature_image_description:
 order: 30
+display: true
 tags: [digital procurement, chris cairns, robert read]
 excerpt: A federal-wide marketplace of pre-vetted software development vendors who practice agile the right way.
 project_members:
