--- a/_projects/carrot.html
+++ b/_projects/carrot.html
@@ -9,6 +9,7 @@ image_description: The icon logo of Carrot.
 feature_image: /img/projects/carrot/carrot-demo-page.png
 feature_image_description: Product screenshot of a demo page of the streams functionality.
 order: 5
+display: true
 tags: [digital services delivery, sean johnson]
 excerpt: An open-source, digital platform for organizations to drive new levels of alignment through radical openness and transparency.
 project_members:
