--- a/pages/about.html
+++ b/pages/about.html
@@ -88,7 +88,7 @@ permalink: /about/
       </div>
 
       <div class="employees">
-        {% assign employees = site.data.team | sort: 'order' %}
+        {% assign employees = site.data.team | where: 'active', 'true' | sort: 'order' %}
 
         {% include hanging_column_size.html
           collection_size = employees.size
@@ -97,31 +97,29 @@ permalink: /about/
 
         <div class="employees-row {{hanging_col_size_css_class}}">
           {% for emp in employees %}
-            {% if emp.active %}
-              <div id="{{emp.name}}" class="employee-col">
-                <div class="employee-card">
-                  <div role="img" class="employee-img" style="background-image: url({{emp.image}});" title="{{emp.image_description}}"></div>
-                  <div class="employee-block">
-                    <h3 class="employee-title">{{emp.full_name}}</h3>
-                    <h4 class="employee-subtitle">{{emp.position}}</h4>
-                    <p class="employee-text">{{emp.bio}}</p>
-                  </div>
-                  <div class="employee-footer">
-                      {% for social in emp.socials %}
-                        {% if social.name == 'Blog Posts' or social.name == 'Projects' %}
-                          {% assign target = '_self' %}
-                        {% else %}
-                          {% assign target = '_blank' %}
-                        {% endif %}
-                        <a href="{{social.link}}" target={{target}} data-toggle="tooltip" data-placement="top" data-animation="false" title="{{social.link_description}}">
-                          <i class="fa fa-{{social.fa_icon_name}}" aria-hidden="true" title="{{social.name}}"></i>
-                          <span class="sr-only">{{social.link_description}}</span>
-                        </a>
-                      {% endfor %}
-                  </div>
+            <div id="{{emp.name}}" class="employee-col">
+              <div class="employee-card">
+                <div role="img" class="employee-img" style="background-image: url({{emp.image}});" title="{{emp.image_description}}"></div>
+                <div class="employee-block">
+                  <h3 class="employee-title">{{emp.full_name}}</h3>
+                  <h4 class="employee-subtitle">{{emp.position}}</h4>
+                  <p class="employee-text">{{emp.bio}}</p>
+                </div>
+                <div class="employee-footer">
+                    {% for social in emp.socials %}
+                      {% if social.name == 'Blog Posts' or social.name == 'Projects' %}
+                        {% assign target = '_self' %}
+                      {% else %}
+                        {% assign target = '_blank' %}
+                      {% endif %}
+                      <a href="{{social.link}}" target={{target}} data-toggle="tooltip" data-placement="top" data-animation="false" title="{{social.link_description}}">
+                        <i class="fa fa-{{social.fa_icon_name}}" aria-hidden="true" title="{{social.name}}"></i>
+                        <span class="sr-only">{{social.link_description}}</span>
+                      </a>
+                    {% endfor %}
                 </div>
               </div>
-            {% endif %}
+            </div>
           {% endfor %}
         </div>
       </div>
