--- a/pages/work.html
+++ b/pages/work.html
@@ -2,6 +2,10 @@
 layout: default
 title: Our Work
 permalink: /work/
+redirect_from:
+  - /work/energyos/
+  - /work/maalka/
+  - /work/people-power/
 ---
 
 {% capture header_content %}
@@ -15,7 +19,7 @@ permalink: /work/
 %}
 
 <div class="our-work">
-  {% assign projects = site.projects | sort: 'order' %}
+  {% assign projects = site.projects | where: 'display', 'true' | sort: 'order' %} %}
 
   {% include card_list.html
     collection = projects
