update about page

--- a/_projects/digital_acquisition_accelerator.html
+++ b/_projects/digital_acquisition_accelerator.html
@@ -9,10 +9,11 @@ feature_image:
 feature_image_description:
 order: 120
 display: true
-tags: [digital procurement, chris cairns]
+tags: [digital procurement, chris cairns, shashank khandelwal]
 excerpt: A pilot program designed to accelerate the adoption of digital acquisition practices across government.
 project_members:
   - chris-cairns
+  - shashank-khandelwal
 technologies:
   - Instructional media
   - G Suite
@@ -56,9 +57,9 @@ source_code_url:
 
 {% capture solution %}
   <p>
-    To address this challenge, Chris Cairns architected and led a "train-the-trainer"
-    program designed to help agencies establish their own multidisciplinary team of
-    digital acquisition experts.
+    To address this challenge, Chris Cairns and Shashank Khandelwal architected and
+    led a "train-the-trainer" program designed to help agencies establish their own
+    multidisciplinary team of digital acquisition experts.
   </p>
 
   <p>
