--- a/_projects/digital_transformation_framework.html
+++ b/_projects/digital_transformation_framework.html
@@ -9,10 +9,11 @@ feature_image:
 feature_image_description:
 order: 100
 display: true
-tags: [digital transformation, chris cairns]
+tags: [digital transformation, chris cairns, shashank khandelwal]
 excerpt: A comprehensive framework designed to help agencies transform into digitally-powered organizations.
 project_members:
   - chris-cairns
+  - shashank-khandelwal
 technologies:
   - G Suite
   - GitHub
@@ -51,7 +52,7 @@ source_code_url:
 
 {% capture solution %}
   <p>
-    To address this challenge, Chris Cairns, as a member of 18F and the Federal Chief Information Officer's
+    To address this challenge, Chris Cairns and Shashank Khandelwal, as members of 18F and the Federal Chief Information Officer's
     Technology Transformation Task Force, the precursor to the American Technology Council,
     collaborated with multiple government technology executives and renowned transformation
     experts to develop a comprehensive framework for digital transformation. The framework
