--- a/_projects/tsa_cloud_adoption.html
+++ b/_projects/tsa_cloud_adoption.html
@@ -9,10 +9,11 @@ feature_image:
 feature_image_description:
 order: 60
 display: true
-tags: [digital transformation, chris cairns]
+tags: [digital transformation, chris cairns, shashank khandelwal]
 excerpt: A jumpstart team for accelerating the Transportation Security Administration's transition to a cloud-based operating model.
 project_members:
   - chris-cairns
+  - shashank-khandelwal
 technologies:
   - Amazon Web Services
   - Microsoft Azure Stack
@@ -55,7 +56,7 @@ source_code_url:
 
 {% capture solution %}
   <p>
-    To address this challenge, Chris Cairns, as a member of 18F, designed an approach to
+    To address this challenge, Chris Cairns and Shashank Khandelwal, as a members of 18F, designed an approach to
     kickstart the organization's adoption of a cloud-based operating model. This involved
     pairing TSA with an expert team of site reliability engineers who:
   </p>
