--- a/_projects/us_navy_protosketching.html
+++ b/_projects/us_navy_protosketching.html
@@ -9,10 +9,11 @@ feature_image:
 feature_image_description:
 order: 90
 display: true
-tags: [microconsulting, robert read]
+tags: [microconsulting, robert read, tom black]
 excerpt: Empowering the U.S. Navy to make critical design and technology decisions through a unique form of rapid prototyping.
 project_members:
   - robert-read
+  - tom-black
 technologies:
   - HTML5 / CSS3
   - JavaScript
