bringing back one ferret by popular demand

--- a/pages/about.html
+++ b/pages/about.html
@@ -26,7 +26,7 @@ permalink: /about/
       <div class="about-info-row">
         <div class="about-info-col">
           <p>
-            Skylight was launched in June of 2017. We're currently made up of 16 people.
+            Skylight was launched in June of 2017. We're currently made up of 16 people and one ferret.
             A lot of us originally worked for civic-oriented groups such as 18F,
             the U.S. Digital Service, and the Presidential Innovation Fellows.
             Now, as part of Skylight, we're working hard to cultivate an incredible
