remove john's projects; add meta condition for indexing

--- a/pages/work.html
+++ b/pages/work.html
@@ -6,6 +6,7 @@ redirect_from:
   - /work/energyos/
   - /work/maalka/
   - /work/people-power/
+  - /work/team-member/john-teeter/
 ---
 
 {% capture header_content %}
