update about page

--- a/pages/about.html
+++ b/pages/about.html
@@ -37,7 +37,7 @@ permalink: /about/
             What brings us together is a passion for creating better outcomes for
             the public through great government digital services. We're basically impact junkies.
             But we're also engineers, developers, designers, product managers, consultants,
-            writers, speakers, inventors, roboticists, gamers, authors,
+            writers, speakers, inventors, roboticists, gamers, authors, veterans,
             entrepreneurs, parents, and more. Such a diverse team always gives us a
             unique perspective on things.
           </p>
