update case studies

--- a/_projects/adopta_agency.html
+++ b/_projects/adopta_agency.html
@@ -14,6 +14,7 @@ excerpt: A civic movement to encourage people to "adopt" government's open datas
 project_members:
   - kin-lane
 technologies:
+  - APIs
   - OpenAPI Specification
   - GitHub
   - Github Pages
