--- a/_projects/carrot.html
+++ b/_projects/carrot.html
@@ -19,6 +19,7 @@ technologies:
   - ClojureScript / React
   - WebSockets
   - Clojure
+  - APIs
   - Microservices
   - RethinkDB
   - Amazon Web Services
