--- a/_projects/talkto.html
+++ b/_projects/talkto.html
@@ -16,6 +16,7 @@ project_members:
 technologies:
   - HTML5 / CSS3
   - JavaScript / Backbone
+  - APIs
   - iOS SDK
   - Android SDK
   - Python / Django
