add git to list of project technologies

--- a/_projects/18f_consulting.html
+++ b/_projects/18f_consulting.html
@@ -23,7 +23,7 @@ technologies:
   - appear.in
   - cloud.gov / Amazon Web Services
   - Federalist / GitHub Pages / Jekyll
-  - GitHub
+  - Git / GitHub
   - Apple
 practices:
   - Servant leadership
