--- a/_projects/adopta_agency.html
+++ b/_projects/adopta_agency.html
@@ -16,7 +16,7 @@ project_members:
 technologies:
   - APIs
   - OpenAPI Specification
-  - GitHub
+  - Git / GitHub
   - Github Pages
   - Jekyll
   - YAML
