--- a/_projects/agile_acquisition_framework.html
+++ b/_projects/agile_acquisition_framework.html
@@ -16,7 +16,7 @@ project_members:
   - robert-read
 technologies:
   - G Suite
-  - GitHub
+  - Git / GitHub
   - GitHub Pages
   - Jekyll
 practices:
