--- a/_projects/carrot.html
+++ b/_projects/carrot.html
@@ -23,7 +23,7 @@ technologies:
   - Microservices
   - RethinkDB
   - Amazon Web Services
-  - GitHub
+  - Git / GitHub
 practices:
   - User experience design
   - Lean startup
