--- a/_projects/digital_transformation_framework.html
+++ b/_projects/digital_transformation_framework.html
@@ -16,7 +16,7 @@ project_members:
   - shashank-khandelwal
 technologies:
   - G Suite
-  - GitHub
+  - Git / GitHub
   - GitHub Pages
   - Jekyll
 practices:
