--- a/_projects/dol_legacy_system_modernization.html
+++ b/_projects/dol_legacy_system_modernization.html
@@ -25,6 +25,7 @@ technologies:
   - Puppet
   - Automated testing frameworks
   - Amazon Web Services
+  - Git / GitHub
 practices:
   - Spike solutions
   - Rapid prototyping
