--- a/_projects/talkto.html
+++ b/_projects/talkto.html
@@ -24,7 +24,7 @@ technologies:
   - PostgreSQL
   - Twilio
   - Amazon Web Services
-  - GitHub
+  - Git / GitHub
 practices:
   - User experience design
   - Lean startup
