--- a/_projects/tsa_cloud_adoption.html
+++ b/_projects/tsa_cloud_adoption.html
@@ -20,7 +20,7 @@ technologies:
   - Octopus Deploy
   - Jenkins
   - Splunk
-  - GitHub
+  - Git / GitHub
 practices:
   - Agile cloud migration
   - Hybrid-cloud architecture
