--- a/_projects/us_navy_protosketching.html
+++ b/_projects/us_navy_protosketching.html
@@ -20,7 +20,7 @@ technologies:
   - Twitter Bootstrap
   - Temporary URLs
   - Heroku
-  - GitHub
+  - Git / GitHub
 practices:
   - Rapid prototyping
   - User story writing and estimation
