--- a/_projects/digital_acquisition_accelerator.html
+++ b/_projects/digital_acquisition_accelerator.html
@@ -17,7 +17,7 @@ project_members:
 technologies:
   - Instructional media
   - G Suite
-  - GitHub
+  - Git / GitHub
   - GitHub Pages
   - Jekyll
 practices:
