don't spell out API

--- a/_projects/adopta_agency.html
+++ b/_projects/adopta_agency.html
@@ -37,7 +37,7 @@ source_code_url:
     <a href="http://adopta.agency/" target="_blank">Adopta.Agency</a> is a movement designed
     around an <a href="http://adopta-agency.github.io/adopta-blueprint/" target="_blank">open blueprint process</a>
     that enables anyone to target an open government dataset, and move it forward one step by
-    producing JSON, and two steps forward by launching an open API (application programming interface).
+    producing JSON, and two steps forward by launching an open API.
   </p>
 {% endcapture %}
 
