get rid of damn GUI term

--- a/_projects/dol_legacy_system_modernization.html
+++ b/_projects/dol_legacy_system_modernization.html
@@ -41,8 +41,8 @@ source_code_url:
 
 {% capture summary %}
   <p>
-    A Department of Labor (DOL) legacy system with a desktop-only graphical user
-    interface (GUI) needed a web-based GUI. By careful inspection of the code and
+    A Department of Labor (DOL) legacy system with a desktop-only user
+    interface (UI) needed a web-based UI. By careful inspection of the code and
     experimentation, a deep "spike" solution was created that allows a small fraction
     of the system to be implemented with a web-based system utilizing in-situ business
     rules and stored procedures. This spike is the basis of planned broadening to provide
