edits to case studies

--- a/_projects/carrot.html
+++ b/_projects/carrot.html
@@ -15,8 +15,8 @@ excerpt: An open-source, digital platform for organizations to drive new levels 
 project_members:
   - sean-johnson
 technologies:
-  - HTML5 / CSS3
-  - ClojureScript / React
+  - HTML / CSS
+  - JavaScript / ClojureScript / React
   - WebSockets
   - Clojure
   - APIs
