--- a/_projects/dol_legacy_system_modernization.html
+++ b/_projects/dol_legacy_system_modernization.html
@@ -15,7 +15,8 @@ project_members:
   - robert-read
   - chris-cairns
 technologies:
-  - HTML5 / CSS3
+  - HTML / CSS
+  - JavaScript
   - Twitter Bootstrap
   - Python
   - APIs
