--- a/_projects/talkto.html
+++ b/_projects/talkto.html
@@ -14,7 +14,7 @@ excerpt: A digital messaging service that lets consumers text any business, and 
 project_members:
   - sean-johnson
 technologies:
-  - HTML5 / CSS3
+  - HTML / CSS
   - JavaScript / Backbone
   - APIs
   - iOS SDK
