--- a/_projects/us_navy_protosketching.html
+++ b/_projects/us_navy_protosketching.html
@@ -15,7 +15,7 @@ project_members:
   - robert-read
   - tom-black
 technologies:
-  - HTML5 / CSS3
+  - HTML / CSS
   - JavaScript
   - Twitter Bootstrap
   - Temporary URLs
