update case study practices

--- a/_projects/18f_consulting.html
+++ b/_projects/18f_consulting.html
@@ -22,7 +22,8 @@ technologies:
   - Mural
   - appear.in
   - cloud.gov / Amazon Web Services
-  - Federalist / GitHub Pages / Jekyll
+  - Federalist / GitHub Pages
+  - Jekyll
   - Git / GitHub
   - Apple
 practices:
