--- a/_projects/carrot.html
+++ b/_projects/carrot.html
@@ -25,6 +25,7 @@ technologies:
   - Amazon Web Services
   - Git / GitHub
 practices:
+  - User research
   - User experience design
   - Lean startup
   - Responsive web design
