--- a/_projects/talkto.html
+++ b/_projects/talkto.html
@@ -26,6 +26,7 @@ technologies:
   - Amazon Web Services
   - Git / GitHub
 practices:
+  - User research
   - User experience design
   - Lean startup
   - Mobile-first design
